syntax = "proto3";

option java_multiple_files = true;
option java_package = "proto.registerRequest";
option java_outer_classname = "RegisterRequestProto";

import "property_type.proto";

service RegisterRequestService {
    rpc CreateRegisterRequest (RegisterRequestMessage) returns (CreateRegisterRequestResponse) {}

    rpc VerifyEmail (EmailVerificationMessage) returns (EmailVerificationResponse) {}
}

message RegisterRequestMessage {
    int64 id = 1;
    string first_name = 2;
    string surname = 3;
    string email = 4;
    string phone = 5;
    string password = 6;
    string confirm_password = 7;
    string country = 8;
    string city = 9;
    string address = 10;
    string postcode = 11;
    bool is_landlord = 12;
}

message CreateRegisterRequestResponse {
    RegisterRequestMessage register_request = 1;
    string return_message = 2;
}

message EmailVerificationMessage {
    string email = 1;
    string token = 2;
}

message EmailVerificationResponse {
    string email = 1;
    string return_message = 2;
}
